# ChangeLog for app-misc/css-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  css-meta-10.9.ebuild:
  stable css-meta-10.9.ebuild

*css-meta-10.9 (22 Sep 2010)

  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -css-meta-10.8.81.ebuild, +css-meta-10.9.ebuild:
  new version

  20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  css-meta-10.8.81.ebuild:
  Added app-misc/screen

*css-meta-10.8.81 (13 Aug 2010)

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -css-meta-10.5.83.ebuild, +css-meta-10.8.81.ebuild:
  New version of meta-package.

  03 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  css-meta-10.5.83.ebuild:
  Added cl-base-meta

  11 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  css-meta-10.5.83.ebuild:
  Added fplugd.

  10 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  css-meta-10.5.83.ebuild:
  Added dhcp

*css-meta-10.5.83 (02 Jun 2010)

  02 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +css-meta-10.5.83.ebuild:
  version bump
