@@ -23,11 +23,6 @@ RDEPEND="${RDEPEND}
 	net-misc/dhcp
 "
 
-# Tools
-RDEPEND="${RDEPEND}
-	app-misc/screen
-"
-
 pkg_postinst() {
 	calculate_change_version
 
