@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Oct 2010; Трацевский Александр
+  <atratsevskiy@gentoo.org> css-meta-10.9.ebuild:
+  Removed app-misc/screen
+
   22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   css-meta-10.9.ebuild:
   stable css-meta-10.9.ebuild
